abstract exercises 02/07/2022